app/plex-media-server/manifests/plex-media-server/templates/statefulset.yaml
---
# Source: plex-media-server/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex-media-server
  labels:
    name: plex-media-server
    app: plex-media-server
    helm.sh/chart: plex-media-server-0.3.0
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: plex-media-server
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
      app.kubernetes.io/instance: plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
        helm.sh/chart: plex-media-server-0.3.0
        app.kubernetes.io/name: plex-media-server
        app.kubernetes.io/instance: plex-media-server
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
      annotations:
        {}
    spec:
      serviceAccountName: plex-media-server
      tolerations:
        []
      nodeSelector:
        {}
      affinity:
        {}
      volumes:
      - name: pms-transcode
        emptyDir: {}
      terminationGracePeriodSeconds: 120
      containers:
      - name: plex-media-server-pms
        image: index.docker.io/plexinc/pms-docker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: pms
        volumeMounts:
        - name: pms-config
          mountPath: /config
        - name: pms-transcode
          mountPath: /transcode
        - name: nfs-vol
          nfs:
            path: /media/
            server: 192.168.0.21
  volumeClaimTemplates:
  - metadata:
      name: pms-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
