app/plex-media-server/manifests/plex-media-server/templates/service.yaml
---
# Source: plex-media-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-media-server
  labels:
    app: plex-media-server
    helm.sh/chart: plex-media-server-0.3.0
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      name: pms
  selector:
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
