app/plex-media-server/manifests/plex-media-server/templates/ingress.yaml
---
# Source: plex-media-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-media-server-ingress
  labels:
    name: plex-media-server-ingress
    app: plex-media-server
    helm.sh/chart: plex-media-server-0.3.0
    app.kubernetes.io/name: plex-media-server
    app.kubernetes.io/instance: plex-media-server
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: traefik
  rules:
  - host: plex.home.adaminformatika.hu
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: plex-media-server
            port:
              number: 32400
  tls:
  - hosts:
    - plex.home.adaminformatika.hu
    secretName: plex-media-server-ingress-lets-encrypt
